objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Gross_Amount__c</fullName>
        <label>Gross Amount</label>
        <summarizedField>Invoice_Item__c.Gross_Item_Total_Price__c</summarizedField>
        <summaryForeignKey>Invoice_Item__c.InvoiceId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <label>Net Amount</label>
        <summarizedField>Invoice_Item__c.Net_Item_Total_Price__c</summarizedField>
        <summaryForeignKey>Invoice_Item__c.InvoiceId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <summarizedField>Invoice_Item__c.Item_Total_VAT_Price__c</summarizedField>
        <summaryForeignKey>Invoice_Item__c.InvoiceId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VAT_Rate__c</fullName>
        <label>VAT Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>